bugfix a la version mobile, las opciones del menú no hacian nada.

--- a/src/input.css
+++ b/src/input.css
@@ -91,6 +91,15 @@
     background-color: white;
   }
 
+  /* MENU MOVIL */
+  .mobile-menu {
+    pointer-events: all;
+  }
+  .mobile-link {
+    pointer-events: all;
+    cursor: pointer;
+  }
+
   /* Navbar scrolled */
   .navbar--scrolled .navbar-inner {
     background: rgba(248, 246, 241, 0.92);
